[package]
name = "imgal"
description = "A fast and open-source scientific image processing and algorithm library."
version = "0.1.1"
authors = ["Edward Evans"]
edition = "2024"
license = "Unlicense"
homepage = "https://docs.rs/imgal"
repository = "https://github.com/imgal-sc/imgal"
readme = "../README.md"
categories = ["algorithms", "mathematics", "science"]

[lib]
name = "imgal"
crate-type = ["rlib"]

[dependencies]
ndarray = { version = "0.16.1", features = ["rayon"] }
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
rustfft = "6.4.1"
