[package]
name = "imgal_python"
version = "0.1.1"
authors = ["Edward Evans"]
edition = "2024"
license = "Unlicense OR MIT"
repository = "https://github.com/imgal-sc/imgal"
readme = "README.md"

[lib]
name = "imgal"
crate-type = ["cdylib"]
doc = false

[dependencies]
imgal = { path = "../imgal" }
pyo3 = { version = "0.27.1", features = ["extension-module"] }
numpy = "0.27.0"
