[package]
name = "imgal"
description = "A fast and open-source scientific image processing and algorithm library."
version = "0.2.1"
authors = ["imgal developers"]
edition = "2024"
license = "Unlicense OR MIT"
homepage = "https://imgal.org"
repository = "https://github.com/imgal-sc/imgal"
readme = "../../README.md"
categories = ["algorithms", "mathematics", "science"]

[lib]
name = "imgal"
crate-type = ["rlib"]

[dependencies]
ndarray = { version = "0.17", features = ["rayon"] }
rayon = "1.11"
rustfft = "6.4"

[dev-dependencies]
divan="0.1"

[[bench]]
name = "copy"
path = "../../benches/bench_copy.rs"
harness = false

[[bench]]
name = "colocalization"
path = "../../benches/bench_colocalization.rs"
harness = false

[[bench]]
name = "distribution"
path = "../../benches/bench_distribution.rs"
harness = false

[[bench]]
name = "filter"
path = "../../benches/bench_filter.rs"
harness = false

[[bench]]
name = "image"
path = "../../benches/bench_image.rs"
harness = false

[[bench]]
name = "phasor"
path = "../../benches/bench_phasor.rs"
harness = false

[[bench]]
name = "simulation"
path = "../../benches/bench_simulation.rs"
harness = false

[[bench]]
name = "statistics"
path = "../../benches/bench_statistics.rs"
harness = false

[[bench]]
name = "spatial"
path = "../../benches/bench_spatial.rs"
harness = false

[[bench]]
name = "threshold"
path = "../../benches/bench_threshold.rs"
harness = false

[lints.clippy]
excessive_precision = "allow"
too_many_arguments = "allow"
