[package]
name = "imgal_python"
version = "0.3.0"
authors = ["imgal developers"]
edition = "2024"
license = "Unlicense OR MIT"
repository = "https://github.com/imgal-sc/imgal"
readme = "README.md"

[lib]
name = "imgal"
crate-type = ["cdylib"]
doc = false

[dependencies]
imgal = { path = "../imgal" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py37", "generate-import-lib"] }
numpy = "0.28"
