[package]
name = "imgal_python"
version = "0.3.1"
authors = ["imgal developers"]
edition = "2024"
license = "Unlicense OR MIT"
repository = "https://github.com/imgal-sc/imgal"
readme = "README.md"

[lib]
name = "imgal"
crate-type = ["cdylib"]
doc = false

[dependencies]
imgal = "0.3"
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py38", "generate-import-lib"] }
numpy = "0.29"
